<resources>
    <string name="app_name">Mishi Creation Admin</string>


    /* for third party app opener util class -- including strings for app share, etc. */
    <string name="need_permission">Need Permission</string>
    <string name="please_wait">Please wait</string>
    <string name="share_app_exception">Unable to share</string>
    <string name="invite_with">Invite with</string>
    <string name="please_add_motivation">Please add motivation</string>
    <string name="please_start_workout">Please start workout</string>
    <string name="app_share_name">Workout Interval Timer</string>
    <string name="enter_audio_name">Enter audio name</string>
    <string name="no_audio_recorded">No Audio Recorded</string>
    <string name="default_audio_prefix">default_</string>
    <string name="save_changes_in_workout">Save changes in workout</string>
    <string name="save_changes_in_audio">Save changes in audio</string>
    <string name="no_browser">No browser</string>
    <string name="no_app">No app</string>


    // for internet dialog
    <string name="no_internet_available">No internet available</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_remove">Are you sure, you want to remove</string>
    <string name="suggestion">Suggestion</string>
    <string name="Bug">Bug</string>
    <string name="Help">Help</string>
    <string name="choose_subject">Choose subject</string>
    <string name="proceed">Proceed</string>
    <string name="try_again">Try Again</string>
    <string name="ok">Ok</string>
    <string name="uploading">Uploading....</string>
    <string name="delete_sucessfully">Delete Sucessfully</string>

    <string name="cancel">cancel</string>
    <string name="manage_workout">Manage Workout</string>
    <string name="manage">Manage</string>
    <string name="edit">Edit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="mishi_admin">Mishi Admin</string>
    <string name="order_details">Order Details</string>
    <string name="change">Change</string>

    <!-- TODO: Remove or changed this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">Name : </string>
    <string name="address">Address : </string>
    <string name="s_product">S Product : </string>
    <string name="phone_no">Phone No : </string>
    <string name="total_price"><strike>Total Price : </strike></string>

    <string name="product_edit_save">SAVE</string>

    <string name="profile">Profile</string>
    <string name="create_new_category">Create New Category</string>
    <string name="create_new_product">Create New Product</string>
    <string name="category_edit">Category Edit</string>
    <string name="upload">Upload</string>
    <string name="sucessfully_upload">Sucessfully Upload</string>
    <string name="sucessfully_change">Sucessfully Change</string>
    <string name="save_sucessfully">Save Sucessfully...</string>
    <string name="update_sucessfully">Update Sucessfully...</string>
    <string name="save_category">Save</string>
    <string name="product_edit">Product Edit</string>
    <string name="category_name">Category Name :</string>
    <string name="pickUp">Pickup</string>
    <string name="image_saved">Image Saved</string>
    <string name="select_action">Select Action</string>
    <string name="after_discount">After Discount(Price) : </string>
    <string name="price">Price : </string>
    <string name="category_name_is_required">Category name is required!</string>
    <string-array name="product_items">
        <item>All</item>
        <item>Ambee</item>
    </string-array>

    <string name="fetching_products">Fetching products...</string>
    <string name="fetching_categories">Fetching categories...</string>
    <string name="creating_category">Creating category...</string>
    <string name="creating_product">Creating product...</string>
    <string name="updating_category">Updating category...</string>
    <string name="updating_product">Updating product...</string>
    <string name="deleting_category">Deleting category...</string>
    <string name="deleting_product">Deleting product...</string>
    <string name="fetching_orders">Fetching orders...</string>
    <string name="deleting_order">Deleting order...</string>
    <string name="title">Title :</string>
    <string name="actual_price">Sale-Price :</string>
    <string name="product_id">Product Id :</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>



</resources>
