<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_order"
    android:layout_margin="20dp"
    android:padding="5dp"

    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="10dp"
       >
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/name"
            />
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="15sp"
            android:layout_below="@id/user_name"/>
        <TextView
            android:id="@+id/user_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_below="@id/user_name"
            android:layout_toRightOf="@id/address"
            />

        <TextView
            android:id="@+id/s_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_product"
            android:textSize="15sp"
            android:layout_below="@id/address"/>
        <TextView
            android:id="@+id/user_s_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_below="@id/user_address"
            android:layout_toRightOf="@id/s_product"
            />
        <TextView
            android:id="@+id/phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_no"
            android:textSize="15sp"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/user_name"/>
        <TextView
            android:id="@+id/user_phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_toRightOf="@id/phone_no"

            />
        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:layout_below="@id/phone_no"

            android:layout_toRightOf="@id/user_address"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/user_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_toRightOf="@id/total_price"
            android:layout_below="@id/user_phone_no"



            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
         >
        <Button
            android:id="@+id/b_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_delete"
            android:textColor="@color/white_color"
            android:textSize="20sp"
            android:background="@drawable/edit_button_background"
            android:layout_alignParentBottom="true"
            />
        </RelativeLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>