<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    tools:context=".activities.OrderDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:id="@+id/rl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/color_black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_order_details_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/name"
                android:maxLines="2"
                android:textColor="@color/color_black"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_name">

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/address"
                android:textColor="@color/color_black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_order_details_user_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/address"
                android:singleLine="false"
                android:textColor="@color/color_black"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_address">

            <TextView
                android:id="@+id/phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"

                android:text="@string/phone_no"
                android:textColor="@color/color_black"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tv_order_details_user_phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/phone_no"
                android:textColor="@color/color_black"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_phone_no">

            <TextView
                android:id="@+id/s_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/s_product"
                android:textColor="@color/color_black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_order_details_user_s_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/s_product"
                android:maxLines="2"
                android:textColor="@color/color_black"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_product">

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/order_item_list_recyler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".MainActivity">

            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_list_recycler_view">

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/total_price"
                android:textColor="@color/color_black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_order_details_user_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/total_price"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/color_black"
                android:textSize="20sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_dicount_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_total_price">

            <TextView
                android:id="@+id/after_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/after_discount"
                android:textColor="@color/color_black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_after_discount_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/after_discount"

                android:textColor="@color/color_black"
                android:textSize="20sp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>


